small corrections part1 exercises

--- a/part_1/1.12_hello_frontend/Dockerfile
+++ b/part_1/1.12_hello_frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Download the latest version of node
-FROM node:latest
+FROM node:14
 
 # Expose a port
 EXPOSE 5000
@@ -7,22 +7,17 @@ EXPOSE 5000
 # Declare the working directory
 WORKDIR /usr/src/app
 
-# Copy the package.json file
-COPY package*.json ./
-
-# Install all packages
-RUN npm install
-
-# Copy the files from current directory
+# Copy files from pwd to the container
 COPY . .
 
-# Build the static files
+# Install all packages, build and install serve
+RUN npm install
 RUN npm run build
-
-# Install serve
 RUN npm install -g serve
 
 # Run the container with serve
 CMD ["serve", "-s", "-l", "5000", "build"]
 
+
+# This dockerfile was run in material-applications/example-frontend folder
 # Command-line: docker build . -t frontend-project && docker run -p 5000:5000 frontend-project
